# mcp-hackathon

./: README.md  gets.sh  mcp.sh
backend/: a.py  requirements.txt  server.py
backend/results/: agent_response.md
browserbase/: .env.example  README.md  main.py  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: MinimaxAssistant.jsx
frontend/src/components/dashboard/: Dashboard.jsx  DealCard.jsx  DealsList.jsx  InsightsSidebar.jsx  LoadingScreen.jsx
frontend/src/components/forms/: BudgetQuestion.jsx  DateQuestion.jsx  DestinationQuestion.jsx  PersonalQuestion.jsx  TravelTypeQuestion.jsx  TravelersQuestion.jsx  WelcomeScreen.jsx
frontend/src/data/: mockData.js
frontend/src/hooks/: useMCP.js
frontend/src/utils/: dealHelpers.js
mcp/: README.md  package-lock.json  package.json
mcp/src/: index.js
src/: index.js
